Implemented Search View

--- a/assets/translations/it.json
+++ b/assets/translations/it.json
@@ -58,6 +58,8 @@
     "home_screen_footer_developer_text": "Sviluppatore",
     "home_screen_footer_payments_row_icon_text": "Powered by",
 
+    "home_screen_search_bar_placeholder": "Cerca Utenti",
+
     
     "product_screen_user_not_logged_in_dialog_title": "Utente non registrato!",
 
